--- a/Projects/Project1/index.html
+++ b/Projects/Project1/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>JokesDose - Make you laugh</title>
+    
     <style>
         body{
             background-color: darkslategray;
@@ -52,13 +53,14 @@
               Jokes that Made your Day
             </div>
             <div class="card-body">
-              <h5 class="d-flex justify-content-center card-title">Special title treatment</h5>
-              <p class="d-flex justify-content-center card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <div class="d-flex justify-content-center"><button type="button" class="btn btn-warning btn-outline-light ">Next Joke</button></div>
+              <h5 id="title" class="d-flex justify-content-center card-title"></h5>
+              <p id="text" style="color: aqua;" class="d-flex justify-content-center card-text"></p>
+              <div class="d-flex justify-content-center"><button id="btn" type="button" class="btn btn-warning btn-outline-light ">Next Joke</button></div>
               
             </div>
           </div>
           </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
